--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -3,10 +3,23 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
+
+
 <f:view>
     <h:outputText value="Welcome, #{userSessionBean.firstName} #{userSessionBean.lastName}!" />
     <p>Your email: #{userSessionBean.email}</p>
+
+        <ui:repeat value="#{userSessionBean.educations}" var="education">
+            <p>Diplomat: #{education.diplomat}</p>
+            <p>University: #{education.university}</p>
+            <p>Year of Obtention: #{education.yearOfObtention}</p>
+        </ui:repeat>
+
+
+    <h:form>
+        <h:commandButton value="ADD Formation" action="#{educationBean.toAddEducation}" />
+    </h:form>
 </f:view>
 </html>
