--- a/src/main/webapp/signup.xhtml
+++ b/src/main/webapp/signup.xhtml
@@ -27,7 +27,7 @@
         <label for="password">Password</label>
         <h:inputSecret id="password" value="#{signupBean.password}" placeholder="Password" />
     </div>
-    <h:commandButton value="Sign Up" action="#{signupBean.signup}" />
+    <h:commandButton styleClass="submit-btn" value="Sign Up" action="#{signupBean.signup}" />
 </h:form>
 </div>
 </body>
