--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -84,7 +84,7 @@
         </div>
     </div>
     <div class="submit-all-container">
-         <h:commandButton value="Save All" styleClass="submit-btn"/>
+        <a href="profil.xhtml" class="submit-btn">Preview</a>
     </div>
 </body>
 </html>
