fix: fixed the "personal Infos and experiences not getting inserted properly" bug.

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -29,7 +29,7 @@
             </div>
             <div class="form-control">
                 <label for="professional-title">Professional Title</label>
-                <h:inputText id="professional-title" value="#{homePageBean.phoneNumber}"/>
+                <h:inputText id="professional-title" value="#{homePageBean.professionalTitle}"/>
             </div>
             <div class="form-control">
                 <label for="phone-number">Phone Number</label>
